fixing files and adding packages

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,4 @@
-<ol class="post-list">
-    {{#each posts as |post|}}
-    <li>
-        {{> post-info post}}
-    </li>
-    {{/each}}
-</ol>
+{{#each posts as |aPost| }}
+{{!-- Pass in the data to each individual post --}}
+{{> post aPost}}
+{{/each}}
