--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,40 +1,11 @@
-<article>
-    <a href="/dashboard"> &larr; Back to dashboard</a>
-    <h2>
-        Edit Post
-    </h2>
-    <form class="edit-post-form">
-        <div>
-            <input name="post-title" type="text" value="{{post.title}}" />
-            <span>({{format_url post.post_url}})</span>
-        </div>
-        <div>
-            {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
-            |
-            <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
-        </div>
-        <button type="submit">Save post</button>
-        <button type="button" class="delete-post-btn">delete post</button>
+<div class="padding-20">
+    <form id="comment-form " class="padding-20">
+        <label for="post-title">New Post Title</label>
+        <input class="padding-20" type="textarea" name="post-title" id="post-title">
+        <label for="post-title">New Text</label>
+        <input class="padding-20" type="textarea" name="post-text" id="post-body">
+        <button class="padding-20" id="create-post-btn">Update!</button>
     </form>
-</article>
-
-{{> post-info post}}
-
-{{#if loggedIn}}
-<form class="comment-form">
-    <div>
-        <textarea name="comment-body"></textarea>
-    </div>
-    <div>
-        <button type="submit">add comment</button>
-    </div>
-</form>
-{{/if}}
-
-{{> comments post.comments}}
-
-{{#if loggedIn}}
-<script src="/javascript/edit-post.js"></script>
-<script src="/javascript/delete-post.js"></script>
-<script src="/javascript/comment.js"></script>
-{{/if}}
+</div>
+<link rel="stylesheet" href="/css/single-post.css">
+<script src="/js/update-post.js"></script>
