--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,36 @@
-<form class="login-form">
-    <div>
-        <label for="email-login">email:</label>
-        <input type="text" id="email-login" />
-    </div>
-    <div>
-        <label for="password-login">password:</label>
-        <input type="password" id="password-login" />
-    </div>
-    <div>
-        <button type='submit'>login</button>
-    </div>
-</form>
+<link rel="stylesheet" href="./css/login.css">
+<div class="wrapper">
+    <form class="login-form">
+        <div class="padding-md">
+            <label for="email-login">email:</label>
+            <input type="text" id="email-login" />
+        </div>
+        <div class="padding-md">
+            <label for="password-login">password:</label>
+            <input type="password" id="password-login" />
+        </div>
+        <div class="padding-md">
+            <button type="submit" id="login-btn">login</button>
+        </div>
+    </form>
 
-<form class="signup-form">
-    <div>
-        <label for="username-signup">username:</label>
-        <input type="text" id="username-signup" />
-    </div>
-    <div>
-        <label for="email-signup">email:</label>
-        <input type="text" id="email-signup" />
-    </div>
-    <div>
-        <label for="password-signup">password:</label>
-        <input type="password" id="password-signup" />
-    </div>
-    <div>
-        <button type='submit'>signup</button>
-    </div>
-</form>
-
-<script src='/javascript/login.js'></script>
+    <form class="signup-form">
+        <div>
+            <label for="username-signup">username:</label>
+            <input id="username-signup" type="text">
+        </div>
+        <div>
+            <label for="email-signup">email:</label>
+            <input type="text" id="email-signup" />
+        </div>
+        <div>
+            <label for="password-signup">password:</label>
+            <input type="password" id="password-signup" />
+        </div>
+        <div>
+            <button type="submit" id="signup-btn">signup</button>
+        </div>
+    </form>
+</div>
+{{!-- Load the login script --}}
+<script src="/js/login.js"></script>
