--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,21 +1,29 @@
-{{> post-info post}}
-
-{{#if loggedIn}}
-<form class="comment-form">
-    <div>
-        <textarea name="comment-body"></textarea>
+<div class="card single-post-padding">
+    <h1 id="post-title" class="post-header">{{post.title}} </h1>
+    <h4>Posted by {{post.user.username}} on 12/1/2020</h4>
+    <div class="container">
+        <p id="post-body" class="post-text post-text-padding">{{post.body}}</p>
     </div>
-
-    <div>
-        <button type="submit">add comment</button>
-        <button type='button' class='upvote-btn'>upvote</button>
-    </div>
-</form>
-{{/if}}
-
-{{> comments post.comments}}
-
-{{#if loggedIn}}
-<script src="/javascript/comment.js"></script>
-<script src="/javascript/upvote.js"></script>
+    {{!-- If this is my post i can edit and delete it --}}
+    {{#if currentUser}}
+    <button id="edit-btn">Edit</button>
+    <button id="delete-btn">Delete</button>
+    {{/if}}
+</div>
+{{!-- Add Comment --}}
+<div class="padding-20">
+    <form id="comment-form " class="padding-20">
+        <label for="comment-text">Leave A Comment</label>
+        <input class="padding-20" type="textarea" name="comment-text" id="comment-text">
+        <button class="padding-20" id="post-comment-btn">Post!</button>
+    </form>
+</div>
+{{!-- Handle the comments --}}
+{{#each post.comments as |aComment|}}
+{{> comment aComment}}
+{{/each}}
+<link rel="stylesheet" href="/css/single-post.css">
+<script src="/js/single-post.js"></script>
+{{#if currentUser}}
+<script src="/js/edit-delete-post.js"> </script>
 {{/if}}
